--- a/html_advanced/2-index.html
+++ b/html_advanced/2-index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
 <head>
+	<meta charset = "utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a technology blog that provides articles on programming, web development, and more.">
+    <!-- Standard favicon -->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Recommended favicon format -->
+    <link rel ="icon" type="image/png" href="favicon.png">
 </head>
 <body>
 </body>
