--- a/html_advanced/2-index.html
+++ b/html_advanced/2-index.html
@@ -4,7 +4,7 @@
 	<meta charset = "utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<title>Homepage - Techium</title>
-    <meta name="description" content="Techium is a technology blog that provides articles on programming, web development, and more.">
+    <meta name="description" content="Techium is a digital agency">
     <!-- Standard favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Recommended favicon format -->
