--- a/html_advanced/3-index.html
+++ b/html_advanced/3-index.html
@@ -9,8 +9,8 @@
     <link rel ="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-    <header>header</header>
-    <main>main</main>
-    <footer>footer</footer>
+    <header>Header</header>
+    <main>Main content</main>
+    <footer>Footer</footer>
 </body>
 </html>
