--- a/html_advanced/9-index.html
+++ b/html_advanced/9-index.html
@@ -12,15 +12,21 @@
     <header><nav></nav></header>
     <main>
         <h1>Homepage</h1>
-        <section><h2>We help build your brand!</h2></section>
-        <section><h2>Services section</h2></section>
+        <section>
+            <h2>We help build your brand!</h2>
+        </section>
+        <section>
+            <h2>Services</h2>
+        </section>
         <section>
             <h2>Works</h2>
             <article>Work 1</article>
             <article>Work 2</article>
             <article>Work 3</article>
         </section>
-        <section><h2>About Us</h2></section>
+        <section>
+            <h2>About Us</h2>
+        </section>
         <section>
             <h2>Latest news</h2>
             <article>Article 1</article>
