Refactored contact section and added aside element

--- a/html_advanced/9-index.html
+++ b/html_advanced/9-index.html
@@ -39,7 +39,10 @@
             <article>Testimonial 2</article>
             <article>Testimonial 3</article>
         </section>
-        <section><h2>Contact</h2></section>
+        <section>
+            <h2>Contact</h2>
+        </section>
+        <aside>Aside</aside>
     </main>
     <footer>Footer</footer>
 </body>
