--- a/html_advanced/9-index.html
+++ b/html_advanced/9-index.html
@@ -9,7 +9,9 @@
     <link rel ="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-    <header><nav></nav></header>
+    <header>
+        <nav></nav>
+    </header>
     <main>
         <h1>Homepage</h1>
         <section>
