--- a/html_advanced/10-index.html
+++ b/html_advanced/10-index.html
@@ -28,9 +28,9 @@
         </section>
         <section>
             <h2>Works</h2>
-            <article><h3>Work 1</h3></article>
-            <article><h3>Work 2</h3></article>
-            <article><h3>Work 3</h3></article>
+            <article><h3>Interior Design</h3></article>
+            <article><h3>Web Development</h3></article>
+            <article><h3>Personal Brand</h3></article>
         </section>
         <section>
             <h2>About Us</h2>
