Remove content from header and footer tags.

--- a/html_advanced/11-styleguide.html
+++ b/html_advanced/11-styleguide.html
@@ -9,7 +9,7 @@
     <link rel ="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-    <header>Header</header>
+    <header></header>
     <main>
         <section>
             <h1>Heading 1</h1>
@@ -22,6 +22,6 @@
         <section>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam auctor, nisl vitae aliquet luctus, nunc nunc egestas velit, nec aliquet libero sapien
     </main>
-    <footer>Footer</footer>
+    <footer></footer>
 </body>
 </html>
