Add headings to header element in styleguide.html

--- a/html_advanced/11-styleguide.html
+++ b/html_advanced/11-styleguide.html
@@ -9,7 +9,7 @@
     <link rel ="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-    <header></header>
+    <header><h2><Headings></h2></header>
     <main>
         <section>
             <h1>Heading 1</h1>
