--- a/html_advanced/11-styleguide.html
+++ b/html_advanced/11-styleguide.html
@@ -9,9 +9,12 @@
     <link rel ="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
-    <header><h2>Headings</h2></header>
+    <header></header>
     <main>
         <section>
+            <header>
+                <h2>Headings</h2>
+            </header>
             <h1>Heading 1</h1>
             <h2>Heading 2</h2>
             <h3>Heading 3</h3>
