Update HTML structure by removing unnecessary comments

--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 
-    <!-- Header to help with scanning your code -->
+    <!-- Header -->
     <header>
         <span>Techium</span>
         <nav></nav>
     </header>
 
-    <!-- Main to help with scanning your code -->
+    <!-- Main  -->
     <main>
         <h1>Homepage</h1>
 
@@ -140,7 +140,7 @@
         <aside>Aside</aside>
     </main>
 
-    <!-- Footer to help with scanning your code -->
+    <!-- Footer -->
     <footer><div>Footer</div></footer>
 </body>
 </html>
