--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -15,8 +15,8 @@
         <span>Techium</span>
         <nav></nav>
     </header>
-
-    <!-- Main  -->
+    <br>
+    <!-- Main -->
     <main>
         <h1>Homepage</h1>
         <br>
@@ -135,6 +135,8 @@
     </main>
     <br>
     <!-- Footer -->
-    <footer><div>Footer</div></footer>
+    <footer>
+        <div>Footer</div>
+    </footer>
 </body>
 </html>
