Add div container for header in index.html

--- a/html_advanced/17-index.html
+++ b/html_advanced/17-index.html
@@ -12,8 +12,10 @@
     <br>
     <!-- Header -->
     <header>
+        <div>
         <span>Techium</span>
         <nav></nav>
+        </div>
     </header>
     <br>
     <!-- Main -->
