Add horizontal rule to styleguide

--- a/html_advanced/28-styleguide.html
+++ b/html_advanced/28-styleguide.html
@@ -62,6 +62,15 @@
                 </dl>
             </div>
         </section>
+
+        <!-- Blockquote -->
+        <section>
+            <header>
+                <h2>Horizontal rule</h2>
+            </header>
+            <div>
+                <hr>
+            </div>
     </main>
     <footer></footer>
 </body>
