--- a/html_advanced/28-styleguide.html
+++ b/html_advanced/28-styleguide.html
@@ -63,7 +63,7 @@
             </div>
         </section>
 
-        <!-- Blockquote -->
+        <!-- Horizontal Rule -->
         <section>
             <header>
                 <h2>Horizontal rule</h2>
