--- a/html_advanced/28-styleguide.html
+++ b/html_advanced/28-styleguide.html
@@ -62,7 +62,7 @@
                 </dl>
             </div>
         </section>
-        <!-- Horizontal Rule -->
+        <!-- Horizontal rule -->
         <section>
             <header>
                 <h2>Horizontal rule</h2>
