Fix formatting in footer address

--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -170,7 +170,9 @@
     <!-- Footer -->
     <footer>
         <address>
-            234 Washington Street<br>
+            234 Washington Street
+            <br>
+            Urbana, Illinois
         </address>
         <div>
             <ul>
