Remove unnecessary paragraph tags in details element

--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -158,14 +158,14 @@
                 <h3>Default</h3>
                 <details>
                     <summary>Show/Hide Me</summary>
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
                 </details>
             </div>
             <div>
                 <h3>Open</h3>
                 <details open>
                     <summary>Always open</summary>
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
                 </details>
             </div>
     </main>
