Add new section to HTML page

--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -168,6 +168,7 @@
                     Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
                 </details>
             </div>
+        </section>
     </main>
     <footer></footer>
 </body>
