--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -87,6 +87,7 @@
                     <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</p>
                     <cite>Kanye West, Musician</cite>
                 </blockquote>
+            </div>
         </section>
         <!-- Typography -->
         <section>
@@ -95,11 +96,8 @@
             </header>
             <div>
                 <address>
-                    320 Stewart Avenue, Unit 12
-                    <br>
-                    New York City
-                    NY
-                    10001
+                    320 Stewart Avenue, Unit 12 <br>
+                    New York City NY 10001
                 </address>
             </div>
             <div>
@@ -111,7 +109,9 @@
                 </pre>
             </div>
             <div>
-                <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
+                <p>
+                    Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.
+                </p>
             </div>
         </section>
 
@@ -131,17 +131,17 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row">Star Wars: Episode IV - A New Hope</td>
+                        <th scope="row">Star Wars: Episode IV - A New Hope</th>
                         <td>George Lucas</td>
                         <td>May 25th, 1977</td>
                     </tr>
                     <tr>
-                        <th scope="row">Star Wars: Episode V - The Empire Strikes Back</td>
+                        <th scope="row">Star Wars: Episode V - The Empire Strikes Back</th>
                         <td>Irvin Kershner</td>
                         <td>May 21st, 1980</td>
                     </tr>
                     <tr>
-                        <th scope="row">Star Wars: Episode VI - Return of the Jedi</td>
+                        <th scope="row">Star Wars: Episode VI - Return of the Jedi</th>
                         <td>Richard Marquand</td>
                         <td>May 25th, 1983</td>
                     </tr>
@@ -156,7 +156,7 @@
             <div>
                 <h3>Default</h3>
                 <details>
-                    <summary>Show/Hide Me</summary>
+                    <summary>Show/Hide me</summary>
                     Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
                 </details>
             </div>
