--- a/html_advanced/35-index.html
+++ b/html_advanced/35-index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header>
         <div>
-            <div><a href="/"><span><img src="logo-black.png" alt="Techium logo" style="width:160px;height:40px;"></span></a></div>
+            <div><a href="/"><img src="logo-black.png" alt="Techium logo" style="width:160px;height:40px;"></a></div>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
