Fix logo size in header

--- a/html_advanced/35-index.html
+++ b/html_advanced/35-index.html
@@ -13,7 +13,7 @@
     <!-- Header -->
     <header>
         <div>
-            <div><a href="/"><img src="logo-black.png" alt="Techium logo" style="width:160px;height:40px;"></a></div>
+            <div><a href="/"><img src="logo-black.png" alt="Techium logo" width="160" height="40";></a></div>
         <nav>
             <ul>
                 <li><a href="/">Home</a></li>
