Fix logo size in footer

--- a/html_advanced/35-index.html
+++ b/html_advanced/35-index.html
@@ -169,7 +169,7 @@
     <br>
     <!-- Footer -->
     <footer>
-        <img src="logo-black.png" alt="Techium logo" style="width:160px;height:40px;">
+        <img src="logo-black.png" alt="Techium logo" width="160" height="40";>
         <address>
             234 Washington Street
             <br>
